package edu.hitsz.basic;

public interface FlyingsObserver {
    void update();
}
